# bitrater

./: .gitignore  LICENSE  MODEL_CARD.md  README.md  pyproject.toml
.github/workflows/: publish.yml
beetsplug/bitrater/: __init__.py  plugin.py
bitrater/: __init__.py  _threading.py  analyzer.py  cli.py  constants.py  cutoff_detector.py  dl_inference.py  dl_model.py  feature_cache.py  file_analyzer.py  spectrum.py  transcode.py  transcode_detector.py  types.py
bitrater/models/: stage1_cnn.onnx  stage2_seq.onnx
tests/: conftest.py  test_analyzer.py  test_analyzer_coverage.py  test_cli.py  test_cutoff_detector.py  test_dl_inference.py  test_feature_cache.py  test_feature_cache_format.py  test_file_analyzer.py  test_file_analyzer_coverage.py  test_integration.py  test_plugin.py  test_plugin_no_print.py  test_psd_cache.py  test_spectrum.py  test_spectrum_coverage.py  test_threading.py  test_transcode.py  test_transcode_detector.py
