[project]
name = "bitrater"
version = "0.1.3"
description = "Audio quality analysis and bitrate detection, with optional beets plugin"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "yamsnjams", email = "yamsnjams@protonmail.com" }
]
keywords = ["beets", "mp3", "bitrate", "audio", "spectral-analysis", "transcoding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

dependencies = [
    "joblib>=1.0.0",
    "librosa>=0.10.0",
    "numpy>=1.20.0",
    "scikit-learn>=1.0.0",
    "mutagen>=1.45.0",
    "tqdm>=4.60.0",
    "onnxruntime>=1.16.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
beets = ["beets>=1.6.0"]
training = [
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
bitrater = "bitrater.cli:main"

[project.urls]
Homepage = "https://github.com/yamsnjams/bitrater"
Repository = "https://github.com/yamsnjams/bitrater"
"Bug Tracker" = "https://github.com/yamsnjams/bitrater/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bitrater", "beetsplug"]



[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchaudio = { index = "pytorch-cu126" }

[tool.uv]
constraint-dependencies = ["onnxruntime<1.20"]
dev-dependencies = [
    "beets>=1.6.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "flake8>=4.0.0",
    "ruff>=0.1.0",
    "onnxscript>=0.6.2",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["bitrater", "beetsplug"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
